--- a/settings.ini
+++ b/settings.ini
@@ -1,6 +1,4 @@
 [DEFAULT]
-# All sections below are required unless otherwise specified
-# see https://github.com/fastai/nbprocess/blob/master/settings.ini for examples
 host = github
 lib_name = execnb
 description = A description of your project
@@ -10,7 +8,7 @@ user = fastai
 author = Jeremy Howard
 author_email = j@fast.ai
 branch = master
-version = 0.0.1
+version = 0.0.2
 min_python = 3.7
 audience = Developers
 language = English
@@ -21,20 +19,9 @@ nbs_path = nbs
 doc_path = docs
 recursive = False
 tst_flags = notest
-
-### Inferred From Other Values ###
-doc_host =  https://%(user)s.github.io
-doc_baseurl = /%(lib_name)s/
-git_url = https://github.com/%(user)s/%(lib_name)s/tree/%(branch)s/
-lib_path = %(lib_name)s
-title = %(lib_name)s
-
-### OPTIONAL ### see https://github.com/fastai/nbprocess/blob/master/settings.ini for examples
-
-# requirements = fastcore pandas
-# dev_requirements = 
-# console_scripts =
-
-
-
+doc_host = https://fastai.github.io
+doc_baseurl = /execnb/
+git_url = https://github.com/fastai/execnb/tree/master/
+lib_path = execnb
+title = execnb
 
