--- a/settings.ini
+++ b/settings.ini
@@ -10,6 +10,8 @@ author_email = j@fast.ai
 branch = master
 version = 0.0.2
 min_python = 3.7
+console_scripts = exec_nb=execnb.shell:exec_nb
+
 audience = Developers
 language = English
 custom_sidebar = False
