--- a/settings.ini
+++ b/settings.ini
@@ -17,6 +17,7 @@ language = English
 custom_sidebar = False
 license = apache2
 status = 2
+requirements = fastcore ipython
 nbs_path = nbs
 doc_path = docs
 recursive = False
