--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,6 +22,7 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install git+https://github.com/fastai/nbprocess.git
           make install
+          pip install -Uq git+https://github.com/fastai/fastcore.git #need the latest fastcore
       - name: Build website
         run: make docs
       - name: Deploy to GitHub Pages
