--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,7 +15,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install git+https://github.com/fastai/nbprocess.git@master
-          pip install -qe ".[dev]"       
+          pip install -qe ".[dev]"
+          pip install -Uq git+https://github.com/fastai/fastcore.git
       - name: Check if all notebooks are cleaned
         run: |
           echo "Check we are starting with clean git checkout"
