--- a/settings.ini
+++ b/settings.ini
@@ -11,7 +11,7 @@ branch = master
 version = 0.0.6
 min_python = 3.7
 requirements = fastcore>=1.3.27 ipython
-dev_requirements = matplotlib
+dev_requirements = matplotlib Pillow
 console_scripts = exec_nb=execnb.shell:exec_nb
 audience = Developers
 language = English
