--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,7 +10,6 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: '3.9'
-          architecture: 'x64'
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
@@ -28,3 +27,26 @@ jobs:
           if [ -n "$(git status -uno -s)" ]; then echo -e "!!! Detected unstripped out notebooks\n!!!Remember to run nbprocess_install_hooks"; false; fi
       - name: Test Notebooks
         run: nbprocess_test
+
+  nbdev-integration-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
+        with:
+          python-version: '3.9'
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -Uq git+https://github.com/fastai/fastcore.git
+          pip install -qe ".[dev]"
+      - name: clone nbdev
+        uses: actions/checkout@v3
+        with:
+          repository: 'fastai/nbprocess'
+          path: nbdev
+      - name: Install nbdev
+        run: |
+          cd nbdev && pip install -Ue ".[dev]"
+          nbprocess_test
+    
