--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -44,9 +44,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: 'fastai/nbprocess'
-          path: nbdev
+          path: nbprocess
       - name: Run nbdev tests
         run: |
-          cd nbdev && pip install -Ue ".[dev]"
+          cd nbprocess && pip install -Ue ".[dev]"
           nbprocess_test
     
