--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,9 +20,9 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install git+https://github.com/fastai/nbprocess.git
+          python -m pip install --pre nbdev
           make install
-          pip install -Uq git+https://github.com/fastai/fastcore.git #need the latest fastcore
+          pip install -Uq --pre fastcore
       - name: Build website
         run: make docs
       - name: Deploy to GitHub Pages
@@ -38,3 +38,4 @@ jobs:
           # You can swap them out with your own user credentials.
           user_name: github-actions[bot]
           user_email: 41898282+github-actions[bot]@users.noreply.github.com
+
