--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,11 +20,10 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install --pre nbdev
-          make install
-          pip install -Uq --pre fastcore
+          pip install --pre nbdev
+          pip install -qe ".[dev]"
       - name: Build website
-        run: make docs
+        run: nbdev_docs
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
