--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,7 +1,6 @@
 name: CI
 on:  [workflow_dispatch, pull_request, push]
 
-
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -13,20 +12,20 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install git+https://github.com/fastai/nbprocess.git@master
-          pip install -qe ".[dev]"
-          pip install -Uq git+https://github.com/fastai/fastcore.git
+          pip install git+https://github.com/fastai/nbdev.git@master
+          pip install -e ".[dev]"
+          pip install -q git+https://github.com/fastai/fastcore.git
       - name: Check if all notebooks are cleaned
         run: |
           echo "Check we are starting with clean git checkout"
           if [ -n "$(git status -uno -s)" ]; then echo "git status is not clean"; false; fi
           echo "Trying to strip out notebooks"
-          nbprocess_clean
+          nbdev_clean
           echo "Check that strip out was unnecessary"
           git status -s # display the status to see which nbs need cleaning up
-          if [ -n "$(git status -uno -s)" ]; then echo -e "!!! Detected unstripped out notebooks\n!!!Remember to run nbprocess_install_hooks"; false; fi
+          if [ -n "$(git status -uno -s)" ]; then echo -e "!!! Detected unstripped out notebooks\n!!!Remember to run nbdev_install_hooks"; false; fi
       - name: Test Notebooks
-        run: nbprocess_test
+        run: nbdev_test
 
   nbdev-integration-test:
     runs-on: ubuntu-latest
@@ -43,14 +42,14 @@ jobs:
       - name: clone nbdev
         uses: actions/checkout@v3
         with:
-          repository: 'fastai/nbprocess'
-          path: nbprocess
+          repository: 'fastai/nbdev'
+          path: nbdev
       - name: Set git info for tests
         run: |
           git config --global user.email "${GH_EMAIL}"
           git config --global user.name "${GH_USERNAME}"
       - name: Run nbdev tests
         run: |
-          cd nbprocess && pip install -Ue ".[dev]"
-          nbprocess_test
+          cd nbdev && pip install -Ue ".[dev]"
+          nbdev_test
     
