--- a/settings.ini
+++ b/settings.ini
@@ -8,7 +8,7 @@ user = fastai
 author = Jeremy Howard
 author_email = j@fast.ai
 branch = master
-version = 0.1.0
+version = 0.1.1
 min_python = 3.7
 requirements = fastcore>=1.5.5 ipython
 dev_requirements = matplotlib Pillow
@@ -27,4 +27,8 @@ doc_baseurl = /execnb/
 git_url = https://github.com/fastai/execnb/tree/master/
 lib_path = execnb
 title = execnb
+black_formatting = False
+readme_nb = index.ipynb
+allowed_metadata_keys = 
+allowed_cell_metadata_keys = 
 
