--- a/settings.ini
+++ b/settings.ini
@@ -8,7 +8,7 @@ user = fastai
 author = Jeremy Howard
 author_email = j@fast.ai
 branch = master
-version = 0.1.1
+version = 0.1.2
 min_python = 3.7
 requirements = fastcore>=1.5.5 ipython
 dev_requirements = matplotlib Pillow
@@ -31,4 +31,6 @@ black_formatting = False
 readme_nb = index.ipynb
 allowed_metadata_keys = 
 allowed_cell_metadata_keys = 
+jupyter_hooks = True
+clean_ids = True
 
