--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --pre nbdev
+          pip install git+https://github.com/fastai/nbdev.git
           pip install -qe ".[dev]"
       - run: nbdev_docs
       - name: Deploy to GitHub Pages
