--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,51 +5,19 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
+      - uses: fastai/workflows/nbdev-ci@master
         with:
-          python-version: '3.9'
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install git+https://github.com/fastai/nbdev.git@master
-          pip install -e ".[dev]"
-          pip install -q git+https://github.com/fastai/fastcore.git
-      - name: Check if all notebooks are cleaned
-        run: |
-          echo "Check we are starting with clean git checkout"
-          if [ -n "$(git status -uno -s)" ]; then echo "git status is not clean"; false; fi
-          echo "Trying to strip out notebooks"
-          nbdev_clean
-          echo "Check that strip out was unnecessary"
-          git status -s # display the status to see which nbs need cleaning up
-          if [ -n "$(git status -uno -s)" ]; then echo -e "!!! Detected unstripped out notebooks\n!!!Remember to run nbdev_install_hooks"; false; fi
-      - name: Test Notebooks
-        run: nbdev_test
-
-  nbdev-integration-test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
-        with:
-          python-version: '3.9'
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -Uq git+https://github.com/fastai/fastcore.git
-          pip install -qe ".[dev]"
+          version: ${{ matrix.version }}
+          pre: 1
       - name: clone nbdev
         uses: actions/checkout@v3
         with:
           repository: 'fastai/nbdev'
           path: nbdev
-      - name: Set git info for tests
+      - name: Run nbdev tests
         run: |
           git config --global user.email "${GH_EMAIL}"
           git config --global user.name "${GH_USERNAME}"
-      - name: Run nbdev tests
-        run: |
           cd nbdev && pip install -Ue ".[dev]"
           nbdev_test
     
