--- a/settings.ini
+++ b/settings.ini
@@ -19,7 +19,7 @@ custom_sidebar = False
 license = apache2
 status = 2
 nbs_path = nbs
-doc_path = docs
+doc_path = _docs
 recursive = False
 tst_flags = notest
 doc_host = https://fastai.github.io
