--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,8 +16,8 @@ jobs:
           path: nbdev
       - name: Run nbdev tests
         run: |
-          git config --global user.email "${GH_EMAIL}"
-          git config --global user.name "${GH_USERNAME}"
+          # git config --global user.email "${GH_EMAIL}"
+          # git config --global user.name "${GH_USERNAME}"
           cd nbdev && pip install -Ue ".[dev]"
           nbdev_test
     
