--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,15 +9,15 @@ jobs:
         with:
           version: ${{ matrix.version }}
           pre: 1
-      - name: clone nbdev
-        uses: actions/checkout@v3
-        with:
-          repository: 'fastai/nbdev'
-          path: nbdev
-      - name: Run nbdev tests
-        run: |
-          # git config --global user.email "${GH_EMAIL}"
-          # git config --global user.name "${GH_USERNAME}"
-          cd nbdev && pip install -Ue ".[dev]"
-          nbdev_test
+#       - name: clone nbdev
+#         uses: actions/checkout@v3
+#         with:
+#           repository: 'fastai/nbdev'
+#           path: nbdev
+#       - name: Run nbdev tests
+#         run: |
+#           # git config --global user.email "${GH_EMAIL}"
+#           # git config --global user.name "${GH_USERNAME}"
+#           cd nbdev && pip install -Ue ".[dev]"
+#           nbdev_test
     
