--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,15 +8,15 @@ jobs:
       - uses: fastai/workflows/nbdev-ci@master
         with:
           pre: 1
-#       - name: clone nbdev
-#         uses: actions/checkout@v3
-#         with:
-#           repository: 'fastai/nbdev'
-#           path: nbdev
-#       - name: Run nbdev tests
-#         run: |
-#           # git config --global user.email "${GH_EMAIL}"
-#           # git config --global user.name "${GH_USERNAME}"
-#           cd nbdev && pip install -Ue ".[dev]"
-#           nbdev_test
+      - name: clone nbdev
+        uses: actions/checkout@v3
+        with:
+          repository: 'fastai/nbdev'
+          path: nbdev
+      - name: Run nbdev tests
+        run: |
+          # git config --global user.email "${GH_EMAIL}"
+          # git config --global user.name "${GH_USERNAME}"
+          cd nbdev && pip install -Ue ".[dev]"
+          nbdev_test
     
