--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,34 +1,11 @@
 name: Deploy to GitHub Pages
-
 on:
   push:
-    branches:
-      - master
-      - main
+    branches: [master]
   workflow_dispatch:
-
 jobs:
   deploy:
-    name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install git+https://github.com/fastai/nbdev.git
-          pip install -qe ".[dev]"
-      - run: nbdev_docs
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          force_orphan: true
-          publish_dir: ./docs
-          # The following lines assign commit authorship to the official
-          # GH-Actions bot for deploys to `gh-pages` branch.
-          # You can swap them out with your own user credentials.
-          user_name: github-actions[bot]
-          user_email: 41898282+github-actions[bot]@users.noreply.github.com
-
+      - uses: fastai/workflows/quarto-ghp@master
+        with: {pre: 1}
