--- a/settings.ini
+++ b/settings.ini
@@ -8,7 +8,7 @@ user = fastai
 author = Jeremy Howard
 author_email = j@fast.ai
 branch = master
-version = 0.1.2
+version = 0.1.3
 min_python = 3.7
 requirements = fastcore>=1.5.5 ipython
 dev_requirements = matplotlib Pillow
@@ -32,4 +32,6 @@ readme_nb = index.ipynb
 allowed_metadata_keys = 
 allowed_cell_metadata_keys = 
 conda_user = fastai
+preview_port = 3000
+preview_host = localhost
 
