--- a/settings.ini
+++ b/settings.ini
@@ -1,6 +1,7 @@
 [DEFAULT]
 host = github
 lib_name = execnb
+repo = execnb
 description = A description of your project
 copyright = Put your copyright info here
 keywords = some keywords
