--- a/settings.ini
+++ b/settings.ini
@@ -9,7 +9,7 @@ user = fastai
 author = Jeremy Howard
 author_email = j@fast.ai
 branch = master
-version = 0.1.4
+version = 0.1.5
 min_python = 3.7
 requirements = fastcore>=1.5.5 ipython
 dev_requirements = matplotlib Pillow
@@ -35,4 +35,8 @@ allowed_cell_metadata_keys =
 conda_user = fastai
 preview_port = 3000
 preview_host = localhost
+jupyter_hooks = True
+clean_ids = True
+clear_all = False
+put_version_in_init = True
 
