--- a/settings.ini
+++ b/settings.ini
@@ -25,13 +25,13 @@ recursive = False
 tst_flags = notest
 doc_host = https://fastai.github.io
 doc_baseurl = /execnb/
-git_url = https://github.com/fastai/execnb/tree/master/
+git_url = https://github.com/%(user)s/%(repo)s/
 lib_path = execnb
 title = execnb
 black_formatting = False
 readme_nb = index.ipynb
-allowed_metadata_keys = 
-allowed_cell_metadata_keys = 
+allowed_metadata_keys =
+allowed_cell_metadata_keys =
 conda_user = fastai
 preview_port = 3000
 preview_host = localhost
