Replace markdown with mistletoe for rendering markdown output

--- a/settings.ini
+++ b/settings.ini
@@ -11,7 +11,7 @@ author_email = j@fast.ai
 branch = master
 version = 0.1.6
 min_python = 3.7
-requirements = fastcore>=1.5.5 ipython
+requirements = fastcore>=1.5.5 ipython mistletoe
 dev_requirements = matplotlib Pillow
 console_scripts = exec_nb=execnb.shell:exec_nb
 audience = Developers
