--- a/settings.ini
+++ b/settings.ini
@@ -9,7 +9,7 @@ user = fastai
 author = Jeremy Howard
 author_email = j@fast.ai
 branch = master
-version = 0.1.6
+version = 0.1.7
 min_python = 3.7
 requirements = fastcore>=1.5.5 ipython mistletoe
 dev_requirements = matplotlib Pillow
@@ -25,13 +25,13 @@ recursive = False
 tst_flags = notest
 doc_host = https://fastai.github.io
 doc_baseurl = /execnb/
-git_url = https://github.com/%(user)s/%(repo)s/
+git_url = https://github.com/fastai/execnb/
 lib_path = execnb
 title = execnb
 black_formatting = False
 readme_nb = index.ipynb
-allowed_metadata_keys =
-allowed_cell_metadata_keys =
+allowed_metadata_keys = 
+allowed_cell_metadata_keys = 
 conda_user = fastai
 preview_port = 3000
 preview_host = localhost
@@ -40,4 +40,5 @@ clean_ids = True
 clear_all = False
 put_version_in_init = True
 cell_number = False
+skip_procs = 
 
