--- a/settings.ini
+++ b/settings.ini
@@ -5,7 +5,7 @@ repo = execnb
 description = A description of your project
 copyright = Put your copyright info here
 keywords = some keywords
-user = fastai
+user = AnswerDotAI
 author = Jeremy Howard
 author_email = j@fast.ai
 branch = master
@@ -23,9 +23,9 @@ nbs_path = nbs
 doc_path = _docs
 recursive = False
 tst_flags = notest
-doc_host = https://fastai.github.io
+doc_host = https://AnswerDotAI.github.io
 doc_baseurl = /execnb/
-git_url = https://github.com/fastai/execnb/
+git_url = https://github.com/AnswerDotAI/execnb/
 lib_path = execnb
 title = execnb
 black_formatting = False
