--- a/settings.ini
+++ b/settings.ini
@@ -11,8 +11,8 @@ author_email = j@fast.ai
 branch = master
 version = 0.1.12
 min_python = 3.7
-requirements = fastcore>=1.5.5 ipython
-dev_requirements = matplotlib Pillow mistletoe
+requirements = fastcore>=1.5.5 ipython mistletoe
+dev_requirements = matplotlib Pillow
 console_scripts = exec_nb=execnb.shell:exec_nb
 audience = Developers
 language = English
